add cli. correct minor bugs in name generator for passing non hex into generate name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ description = "a cli and python package for naming hashes"
 authors = ["CircArgs <quebecname@gmail.com>"]
 license = "GPL-3.0"
 
+readme = 'README.md'
+
+repository = "https://github.com/CircArgs/git-name"
+homepage = "https://github.com/CircArgs/git-name"
+
+keywords = ['git', 'commit', 'hash', "naming"]
+
 [tool.poetry.dependencies]
 python = "^3.5"
 inflect = "^4.1.0"
@@ -14,9 +21,8 @@ dephell = "^0.8.3"
 black = "^19.10b0"
 pytest = "^6.0.1"
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[tool.poetry.scripts]
+git-name = 'git_name.cli:main'
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
